y.output
Terminaux inutilisés dans la grammaire

   t_FLOAT
   t_CHAR
   t_CO
   t_CF
   t_TAB
   t_NCOMPAR
   t_INF_E
   t_SUP_E
   t_RETURN
   t_GUILLEMET
   '='
   '+'
   '-'
   '*'
   '/'


État 74 conflits: 7 décalage/réduction
État 75 conflits: 7 décalage/réduction
État 76 conflits: 7 décalage/réduction
État 77 conflits: 7 décalage/réduction
État 78 conflits: 7 décalage/réduction
État 79 conflits: 7 décalage/réduction
État 80 conflits: 7 décalage/réduction


Grammaire

    0 $accept: S $end

    1 $@1: %empty

    2 $@2: %empty

    3 S: $@1 type t_MAIN t_PO t_PF t_AO $@2 corps t_AF

    4 $@3: %empty

    5 S: t_MAIN t_PO t_PF t_AO $@3 corps t_AF

    6 corps: declaration instruction

    7 $@4: %empty

    8 declaration: type t_VAR $@4 declaration_type

    9 $@5: %empty

   10 declaration_type: t_VIRG t_VAR $@5 declaration_type
   11                 | t_PV declaration
   12                 | t_PV

   13 instruction: affectation instruction
   14            | affectation
   15            | print instruction
   16            | print
   17            | ifblock
   18            | ifblock instruction
   19            | whileblock
   20            | whileblock instruction

   21 $@6: %empty

   22 affectation: t_VAR t_AFFEC expression $@6 t_PV

   23 corpsfct: declaration instruction
   24         | instruction

   25 ifblock: ifblock1

   26 $@7: %empty

   27 ifblock: ifblock1 t_ELSE $@7 t_AO instruction t_AF

   28 $@8: %empty

   29 ifblock1: t_IF t_PO expression $@8 t_PF t_AO instruction t_AF

   30 whileblock: t_WHILE t_PO expression t_PF t_AO corpsfct t_AF

   31 print: t_PRINTF t_PO t_VAR t_PF t_PV
   32      | t_PRINTF t_PO t_STRING t_PF t_PV

   33 expression: t_INT
   34           | t_VAR
   35           | expression t_ADD expression
   36           | expression t_MUL expression
   37           | expression t_DIV expression
   38           | expression t_DIFF expression
   39           | expression t_INF expression
   40           | expression t_SUP expression
   41           | expression t_COMPAR expression

   42 type: t_TINT
   43     | t_TCONST
   44     | t_TVOID


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'*' (42)
'+' (43)
'-' (45)
'/' (47)
'=' (61)
error (256)
t_MAIN (258) 3 5
t_VIRG (259) 10
t_PRINTF (260) 31 32
t_WHILE (261) 30
t_IF (262) 29
t_ELSE (263) 27
t_TINT (264) 42
t_TVOID (265) 44
t_INT (266) 33
t_FLOAT (267)
t_CHAR (268)
t_PO (269) 3 5 29 30 31 32
t_PF (270) 3 5 29 30 31 32
t_AO (271) 3 5 27 29 30
t_AF (272) 3 5 27 29 30
t_CO (273)
t_CF (274)
t_TAB (275)
t_ADD (276) 35
t_MUL (277) 36
t_DIV (278) 37
t_DIFF (279) 38
t_COMPAR (280) 41
t_NCOMPAR (281)
t_INF_E (282)
t_SUP_E (283)
t_INF (284) 39
t_SUP (285) 40
t_AFFEC (286) 22
t_RETURN (287)
t_GUILLEMET (288)
t_PV (289) 11 12 22 31 32
t_VAR (290) 8 10 22 31 34
t_STRING (291) 32
t_TCONST (292) 43


Non-terminaux, suivis des règles où ils apparaissent

$accept (43)
    à gauche: 0
S (44)
    à gauche: 3 5, à droite: 0
$@1 (45)
    à gauche: 1, à droite: 3
$@2 (46)
    à gauche: 2, à droite: 3
$@3 (47)
    à gauche: 4, à droite: 5
corps (48)
    à gauche: 6, à droite: 3 5
declaration (49)
    à gauche: 8, à droite: 6 11 23
$@4 (50)
    à gauche: 7, à droite: 8
declaration_type (51)
    à gauche: 10 11 12, à droite: 8 10
$@5 (52)
    à gauche: 9, à droite: 10
instruction (53)
    à gauche: 13 14 15 16 17 18 19 20, à droite: 6 13 15 18 20 23
    24 27 29
affectation (54)
    à gauche: 22, à droite: 13 14
$@6 (55)
    à gauche: 21, à droite: 22
corpsfct (56)
    à gauche: 23 24, à droite: 30
ifblock (57)
    à gauche: 25 27, à droite: 17 18
$@7 (58)
    à gauche: 26, à droite: 27
ifblock1 (59)
    à gauche: 29, à droite: 25 27
$@8 (60)
    à gauche: 28, à droite: 29
whileblock (61)
    à gauche: 30, à droite: 19 20
print (62)
    à gauche: 31 32, à droite: 15 16
expression (63)
    à gauche: 33 34 35 36 37 38 39 40 41, à droite: 22 29 30 35 36
    37 38 39 40 41
type (64)
    à gauche: 42 43 44, à droite: 3 8


État 0

    0 $accept: . S $end

    t_MAIN  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 1 ($@1)

    S    aller à l'état 2
    $@1  aller à l'état 3


État 1

    5 S: t_MAIN . t_PO t_PF t_AO $@3 corps t_AF

    t_PO  décalage et aller à l'état 4


État 2

    0 $accept: S . $end

    $end  décalage et aller à l'état 5


État 3

    3 S: $@1 . type t_MAIN t_PO t_PF t_AO $@2 corps t_AF

    t_TINT    décalage et aller à l'état 6
    t_TVOID   décalage et aller à l'état 7
    t_TCONST  décalage et aller à l'état 8

    type  aller à l'état 9


État 4

    5 S: t_MAIN t_PO . t_PF t_AO $@3 corps t_AF

    t_PF  décalage et aller à l'état 10


État 5

    0 $accept: S $end .

    $défaut  accepter


État 6

   42 type: t_TINT .

    $défaut  réduction par utilisation de la règle 42 (type)


État 7

   44 type: t_TVOID .

    $défaut  réduction par utilisation de la règle 44 (type)


État 8

   43 type: t_TCONST .

    $défaut  réduction par utilisation de la règle 43 (type)


État 9

    3 S: $@1 type . t_MAIN t_PO t_PF t_AO $@2 corps t_AF

    t_MAIN  décalage et aller à l'état 11


État 10

    5 S: t_MAIN t_PO t_PF . t_AO $@3 corps t_AF

    t_AO  décalage et aller à l'état 12


État 11

    3 S: $@1 type t_MAIN . t_PO t_PF t_AO $@2 corps t_AF

    t_PO  décalage et aller à l'état 13


État 12

    5 S: t_MAIN t_PO t_PF t_AO . $@3 corps t_AF

    $défaut  réduction par utilisation de la règle 4 ($@3)

    $@3  aller à l'état 14


État 13

    3 S: $@1 type t_MAIN t_PO . t_PF t_AO $@2 corps t_AF

    t_PF  décalage et aller à l'état 15


État 14

    5 S: t_MAIN t_PO t_PF t_AO $@3 . corps t_AF

    t_TINT    décalage et aller à l'état 6
    t_TVOID   décalage et aller à l'état 7
    t_TCONST  décalage et aller à l'état 8

    corps        aller à l'état 16
    declaration  aller à l'état 17
    type         aller à l'état 18


État 15

    3 S: $@1 type t_MAIN t_PO t_PF . t_AO $@2 corps t_AF

    t_AO  décalage et aller à l'état 19


État 16

    5 S: t_MAIN t_PO t_PF t_AO $@3 corps . t_AF

    t_AF  décalage et aller à l'état 20


État 17

    6 corps: declaration . instruction

    t_PRINTF  décalage et aller à l'état 21
    t_WHILE   décalage et aller à l'état 22
    t_IF      décalage et aller à l'état 23
    t_VAR     décalage et aller à l'état 24

    instruction  aller à l'état 25
    affectation  aller à l'état 26
    ifblock      aller à l'état 27
    ifblock1     aller à l'état 28
    whileblock   aller à l'état 29
    print        aller à l'état 30


État 18

    8 declaration: type . t_VAR $@4 declaration_type

    t_VAR  décalage et aller à l'état 31


État 19

    3 S: $@1 type t_MAIN t_PO t_PF t_AO . $@2 corps t_AF

    $défaut  réduction par utilisation de la règle 2 ($@2)

    $@2  aller à l'état 32


État 20

    5 S: t_MAIN t_PO t_PF t_AO $@3 corps t_AF .

    $défaut  réduction par utilisation de la règle 5 (S)


État 21

   31 print: t_PRINTF . t_PO t_VAR t_PF t_PV
   32      | t_PRINTF . t_PO t_STRING t_PF t_PV

    t_PO  décalage et aller à l'état 33


État 22

   30 whileblock: t_WHILE . t_PO expression t_PF t_AO corpsfct t_AF

    t_PO  décalage et aller à l'état 34


État 23

   29 ifblock1: t_IF . t_PO expression $@8 t_PF t_AO instruction t_AF

    t_PO  décalage et aller à l'état 35


État 24

   22 affectation: t_VAR . t_AFFEC expression $@6 t_PV

    t_AFFEC  décalage et aller à l'état 36


État 25

    6 corps: declaration instruction .

    $défaut  réduction par utilisation de la règle 6 (corps)


État 26

   13 instruction: affectation . instruction
   14            | affectation .

    t_PRINTF  décalage et aller à l'état 21
    t_WHILE   décalage et aller à l'état 22
    t_IF      décalage et aller à l'état 23
    t_VAR     décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 14 (instruction)

    instruction  aller à l'état 37
    affectation  aller à l'état 26
    ifblock      aller à l'état 27
    ifblock1     aller à l'état 28
    whileblock   aller à l'état 29
    print        aller à l'état 30


État 27

   17 instruction: ifblock .
   18            | ifblock . instruction

    t_PRINTF  décalage et aller à l'état 21
    t_WHILE   décalage et aller à l'état 22
    t_IF      décalage et aller à l'état 23
    t_VAR     décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 17 (instruction)

    instruction  aller à l'état 38
    affectation  aller à l'état 26
    ifblock      aller à l'état 27
    ifblock1     aller à l'état 28
    whileblock   aller à l'état 29
    print        aller à l'état 30


État 28

   25 ifblock: ifblock1 .
   27        | ifblock1 . t_ELSE $@7 t_AO instruction t_AF

    t_ELSE  décalage et aller à l'état 39

    $défaut  réduction par utilisation de la règle 25 (ifblock)


État 29

   19 instruction: whileblock .
   20            | whileblock . instruction

    t_PRINTF  décalage et aller à l'état 21
    t_WHILE   décalage et aller à l'état 22
    t_IF      décalage et aller à l'état 23
    t_VAR     décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 19 (instruction)

    instruction  aller à l'état 40
    affectation  aller à l'état 26
    ifblock      aller à l'état 27
    ifblock1     aller à l'état 28
    whileblock   aller à l'état 29
    print        aller à l'état 30


État 30

   15 instruction: print . instruction
   16            | print .

    t_PRINTF  décalage et aller à l'état 21
    t_WHILE   décalage et aller à l'état 22
    t_IF      décalage et aller à l'état 23
    t_VAR     décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 16 (instruction)

    instruction  aller à l'état 41
    affectation  aller à l'état 26
    ifblock      aller à l'état 27
    ifblock1     aller à l'état 28
    whileblock   aller à l'état 29
    print        aller à l'état 30


État 31

    8 declaration: type t_VAR . $@4 declaration_type

    $défaut  réduction par utilisation de la règle 7 ($@4)

    $@4  aller à l'état 42


État 32

    3 S: $@1 type t_MAIN t_PO t_PF t_AO $@2 . corps t_AF

    t_TINT    décalage et aller à l'état 6
    t_TVOID   décalage et aller à l'état 7
    t_TCONST  décalage et aller à l'état 8

    corps        aller à l'état 43
    declaration  aller à l'état 17
    type         aller à l'état 18


État 33

   31 print: t_PRINTF t_PO . t_VAR t_PF t_PV
   32      | t_PRINTF t_PO . t_STRING t_PF t_PV

    t_VAR     décalage et aller à l'état 44
    t_STRING  décalage et aller à l'état 45


État 34

   30 whileblock: t_WHILE t_PO . expression t_PF t_AO corpsfct t_AF

    t_INT  décalage et aller à l'état 46
    t_VAR  décalage et aller à l'état 47

    expression  aller à l'état 48


État 35

   29 ifblock1: t_IF t_PO . expression $@8 t_PF t_AO instruction t_AF

    t_INT  décalage et aller à l'état 46
    t_VAR  décalage et aller à l'état 47

    expression  aller à l'état 49


État 36

   22 affectation: t_VAR t_AFFEC . expression $@6 t_PV

    t_INT  décalage et aller à l'état 46
    t_VAR  décalage et aller à l'état 47

    expression  aller à l'état 50


État 37

   13 instruction: affectation instruction .

    $défaut  réduction par utilisation de la règle 13 (instruction)


État 38

   18 instruction: ifblock instruction .

    $défaut  réduction par utilisation de la règle 18 (instruction)


État 39

   27 ifblock: ifblock1 t_ELSE . $@7 t_AO instruction t_AF

    $défaut  réduction par utilisation de la règle 26 ($@7)

    $@7  aller à l'état 51


État 40

   20 instruction: whileblock instruction .

    $défaut  réduction par utilisation de la règle 20 (instruction)


État 41

   15 instruction: print instruction .

    $défaut  réduction par utilisation de la règle 15 (instruction)


État 42

    8 declaration: type t_VAR $@4 . declaration_type

    t_VIRG  décalage et aller à l'état 52
    t_PV    décalage et aller à l'état 53

    declaration_type  aller à l'état 54


État 43

    3 S: $@1 type t_MAIN t_PO t_PF t_AO $@2 corps . t_AF

    t_AF  décalage et aller à l'état 55


État 44

   31 print: t_PRINTF t_PO t_VAR . t_PF t_PV

    t_PF  décalage et aller à l'état 56


État 45

   32 print: t_PRINTF t_PO t_STRING . t_PF t_PV

    t_PF  décalage et aller à l'état 57


État 46

   33 expression: t_INT .

    $défaut  réduction par utilisation de la règle 33 (expression)


État 47

   34 expression: t_VAR .

    $défaut  réduction par utilisation de la règle 34 (expression)


État 48

   30 whileblock: t_WHILE t_PO expression . t_PF t_AO corpsfct t_AF
   35 expression: expression . t_ADD expression
   36           | expression . t_MUL expression
   37           | expression . t_DIV expression
   38           | expression . t_DIFF expression
   39           | expression . t_INF expression
   40           | expression . t_SUP expression
   41           | expression . t_COMPAR expression

    t_PF      décalage et aller à l'état 58
    t_ADD     décalage et aller à l'état 59
    t_MUL     décalage et aller à l'état 60
    t_DIV     décalage et aller à l'état 61
    t_DIFF    décalage et aller à l'état 62
    t_COMPAR  décalage et aller à l'état 63
    t_INF     décalage et aller à l'état 64
    t_SUP     décalage et aller à l'état 65


État 49

   29 ifblock1: t_IF t_PO expression . $@8 t_PF t_AO instruction t_AF
   35 expression: expression . t_ADD expression
   36           | expression . t_MUL expression
   37           | expression . t_DIV expression
   38           | expression . t_DIFF expression
   39           | expression . t_INF expression
   40           | expression . t_SUP expression
   41           | expression . t_COMPAR expression

    t_ADD     décalage et aller à l'état 59
    t_MUL     décalage et aller à l'état 60
    t_DIV     décalage et aller à l'état 61
    t_DIFF    décalage et aller à l'état 62
    t_COMPAR  décalage et aller à l'état 63
    t_INF     décalage et aller à l'état 64
    t_SUP     décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 28 ($@8)

    $@8  aller à l'état 66


État 50

   22 affectation: t_VAR t_AFFEC expression . $@6 t_PV
   35 expression: expression . t_ADD expression
   36           | expression . t_MUL expression
   37           | expression . t_DIV expression
   38           | expression . t_DIFF expression
   39           | expression . t_INF expression
   40           | expression . t_SUP expression
   41           | expression . t_COMPAR expression

    t_ADD     décalage et aller à l'état 59
    t_MUL     décalage et aller à l'état 60
    t_DIV     décalage et aller à l'état 61
    t_DIFF    décalage et aller à l'état 62
    t_COMPAR  décalage et aller à l'état 63
    t_INF     décalage et aller à l'état 64
    t_SUP     décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 21 ($@6)

    $@6  aller à l'état 67


État 51

   27 ifblock: ifblock1 t_ELSE $@7 . t_AO instruction t_AF

    t_AO  décalage et aller à l'état 68


État 52

   10 declaration_type: t_VIRG . t_VAR $@5 declaration_type

    t_VAR  décalage et aller à l'état 69


État 53

   11 declaration_type: t_PV . declaration
   12                 | t_PV .

    t_TINT    décalage et aller à l'état 6
    t_TVOID   décalage et aller à l'état 7
    t_TCONST  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 12 (declaration_type)

    declaration  aller à l'état 70
    type         aller à l'état 18


État 54

    8 declaration: type t_VAR $@4 declaration_type .

    $défaut  réduction par utilisation de la règle 8 (declaration)


État 55

    3 S: $@1 type t_MAIN t_PO t_PF t_AO $@2 corps t_AF .

    $défaut  réduction par utilisation de la règle 3 (S)


État 56

   31 print: t_PRINTF t_PO t_VAR t_PF . t_PV

    t_PV  décalage et aller à l'état 71


État 57

   32 print: t_PRINTF t_PO t_STRING t_PF . t_PV

    t_PV  décalage et aller à l'état 72


État 58

   30 whileblock: t_WHILE t_PO expression t_PF . t_AO corpsfct t_AF

    t_AO  décalage et aller à l'état 73


État 59

   35 expression: expression t_ADD . expression

    t_INT  décalage et aller à l'état 46
    t_VAR  décalage et aller à l'état 47

    expression  aller à l'état 74


État 60

   36 expression: expression t_MUL . expression

    t_INT  décalage et aller à l'état 46
    t_VAR  décalage et aller à l'état 47

    expression  aller à l'état 75


État 61

   37 expression: expression t_DIV . expression

    t_INT  décalage et aller à l'état 46
    t_VAR  décalage et aller à l'état 47

    expression  aller à l'état 76


État 62

   38 expression: expression t_DIFF . expression

    t_INT  décalage et aller à l'état 46
    t_VAR  décalage et aller à l'état 47

    expression  aller à l'état 77


État 63

   41 expression: expression t_COMPAR . expression

    t_INT  décalage et aller à l'état 46
    t_VAR  décalage et aller à l'état 47

    expression  aller à l'état 78


État 64

   39 expression: expression t_INF . expression

    t_INT  décalage et aller à l'état 46
    t_VAR  décalage et aller à l'état 47

    expression  aller à l'état 79


État 65

   40 expression: expression t_SUP . expression

    t_INT  décalage et aller à l'état 46
    t_VAR  décalage et aller à l'état 47

    expression  aller à l'état 80


État 66

   29 ifblock1: t_IF t_PO expression $@8 . t_PF t_AO instruction t_AF

    t_PF  décalage et aller à l'état 81


État 67

   22 affectation: t_VAR t_AFFEC expression $@6 . t_PV

    t_PV  décalage et aller à l'état 82


État 68

   27 ifblock: ifblock1 t_ELSE $@7 t_AO . instruction t_AF

    t_PRINTF  décalage et aller à l'état 21
    t_WHILE   décalage et aller à l'état 22
    t_IF      décalage et aller à l'état 23
    t_VAR     décalage et aller à l'état 24

    instruction  aller à l'état 83
    affectation  aller à l'état 26
    ifblock      aller à l'état 27
    ifblock1     aller à l'état 28
    whileblock   aller à l'état 29
    print        aller à l'état 30


État 69

   10 declaration_type: t_VIRG t_VAR . $@5 declaration_type

    $défaut  réduction par utilisation de la règle 9 ($@5)

    $@5  aller à l'état 84


État 70

   11 declaration_type: t_PV declaration .

    $défaut  réduction par utilisation de la règle 11 (declaration_type)


État 71

   31 print: t_PRINTF t_PO t_VAR t_PF t_PV .

    $défaut  réduction par utilisation de la règle 31 (print)


État 72

   32 print: t_PRINTF t_PO t_STRING t_PF t_PV .

    $défaut  réduction par utilisation de la règle 32 (print)


État 73

   30 whileblock: t_WHILE t_PO expression t_PF t_AO . corpsfct t_AF

    t_PRINTF  décalage et aller à l'état 21
    t_WHILE   décalage et aller à l'état 22
    t_IF      décalage et aller à l'état 23
    t_TINT    décalage et aller à l'état 6
    t_TVOID   décalage et aller à l'état 7
    t_VAR     décalage et aller à l'état 24
    t_TCONST  décalage et aller à l'état 8

    declaration  aller à l'état 85
    instruction  aller à l'état 86
    affectation  aller à l'état 26
    corpsfct     aller à l'état 87
    ifblock      aller à l'état 27
    ifblock1     aller à l'état 28
    whileblock   aller à l'état 29
    print        aller à l'état 30
    type         aller à l'état 18


État 74

   35 expression: expression . t_ADD expression
   35           | expression t_ADD expression .
   36           | expression . t_MUL expression
   37           | expression . t_DIV expression
   38           | expression . t_DIFF expression
   39           | expression . t_INF expression
   40           | expression . t_SUP expression
   41           | expression . t_COMPAR expression

    t_ADD     décalage et aller à l'état 59
    t_MUL     décalage et aller à l'état 60
    t_DIV     décalage et aller à l'état 61
    t_DIFF    décalage et aller à l'état 62
    t_COMPAR  décalage et aller à l'état 63
    t_INF     décalage et aller à l'état 64
    t_SUP     décalage et aller à l'état 65

    t_ADD     [réduction par utilisation de la règle 35 (expression)]
    t_MUL     [réduction par utilisation de la règle 35 (expression)]
    t_DIV     [réduction par utilisation de la règle 35 (expression)]
    t_DIFF    [réduction par utilisation de la règle 35 (expression)]
    t_COMPAR  [réduction par utilisation de la règle 35 (expression)]
    t_INF     [réduction par utilisation de la règle 35 (expression)]
    t_SUP     [réduction par utilisation de la règle 35 (expression)]
    $défaut  réduction par utilisation de la règle 35 (expression)


État 75

   35 expression: expression . t_ADD expression
   36           | expression . t_MUL expression
   36           | expression t_MUL expression .
   37           | expression . t_DIV expression
   38           | expression . t_DIFF expression
   39           | expression . t_INF expression
   40           | expression . t_SUP expression
   41           | expression . t_COMPAR expression

    t_ADD     décalage et aller à l'état 59
    t_MUL     décalage et aller à l'état 60
    t_DIV     décalage et aller à l'état 61
    t_DIFF    décalage et aller à l'état 62
    t_COMPAR  décalage et aller à l'état 63
    t_INF     décalage et aller à l'état 64
    t_SUP     décalage et aller à l'état 65

    t_ADD     [réduction par utilisation de la règle 36 (expression)]
    t_MUL     [réduction par utilisation de la règle 36 (expression)]
    t_DIV     [réduction par utilisation de la règle 36 (expression)]
    t_DIFF    [réduction par utilisation de la règle 36 (expression)]
    t_COMPAR  [réduction par utilisation de la règle 36 (expression)]
    t_INF     [réduction par utilisation de la règle 36 (expression)]
    t_SUP     [réduction par utilisation de la règle 36 (expression)]
    $défaut  réduction par utilisation de la règle 36 (expression)


État 76

   35 expression: expression . t_ADD expression
   36           | expression . t_MUL expression
   37           | expression . t_DIV expression
   37           | expression t_DIV expression .
   38           | expression . t_DIFF expression
   39           | expression . t_INF expression
   40           | expression . t_SUP expression
   41           | expression . t_COMPAR expression

    t_ADD     décalage et aller à l'état 59
    t_MUL     décalage et aller à l'état 60
    t_DIV     décalage et aller à l'état 61
    t_DIFF    décalage et aller à l'état 62
    t_COMPAR  décalage et aller à l'état 63
    t_INF     décalage et aller à l'état 64
    t_SUP     décalage et aller à l'état 65

    t_ADD     [réduction par utilisation de la règle 37 (expression)]
    t_MUL     [réduction par utilisation de la règle 37 (expression)]
    t_DIV     [réduction par utilisation de la règle 37 (expression)]
    t_DIFF    [réduction par utilisation de la règle 37 (expression)]
    t_COMPAR  [réduction par utilisation de la règle 37 (expression)]
    t_INF     [réduction par utilisation de la règle 37 (expression)]
    t_SUP     [réduction par utilisation de la règle 37 (expression)]
    $défaut  réduction par utilisation de la règle 37 (expression)


État 77

   35 expression: expression . t_ADD expression
   36           | expression . t_MUL expression
   37           | expression . t_DIV expression
   38           | expression . t_DIFF expression
   38           | expression t_DIFF expression .
   39           | expression . t_INF expression
   40           | expression . t_SUP expression
   41           | expression . t_COMPAR expression

    t_ADD     décalage et aller à l'état 59
    t_MUL     décalage et aller à l'état 60
    t_DIV     décalage et aller à l'état 61
    t_DIFF    décalage et aller à l'état 62
    t_COMPAR  décalage et aller à l'état 63
    t_INF     décalage et aller à l'état 64
    t_SUP     décalage et aller à l'état 65

    t_ADD     [réduction par utilisation de la règle 38 (expression)]
    t_MUL     [réduction par utilisation de la règle 38 (expression)]
    t_DIV     [réduction par utilisation de la règle 38 (expression)]
    t_DIFF    [réduction par utilisation de la règle 38 (expression)]
    t_COMPAR  [réduction par utilisation de la règle 38 (expression)]
    t_INF     [réduction par utilisation de la règle 38 (expression)]
    t_SUP     [réduction par utilisation de la règle 38 (expression)]
    $défaut  réduction par utilisation de la règle 38 (expression)


État 78

   35 expression: expression . t_ADD expression
   36           | expression . t_MUL expression
   37           | expression . t_DIV expression
   38           | expression . t_DIFF expression
   39           | expression . t_INF expression
   40           | expression . t_SUP expression
   41           | expression . t_COMPAR expression
   41           | expression t_COMPAR expression .

    t_ADD     décalage et aller à l'état 59
    t_MUL     décalage et aller à l'état 60
    t_DIV     décalage et aller à l'état 61
    t_DIFF    décalage et aller à l'état 62
    t_COMPAR  décalage et aller à l'état 63
    t_INF     décalage et aller à l'état 64
    t_SUP     décalage et aller à l'état 65

    t_ADD     [réduction par utilisation de la règle 41 (expression)]
    t_MUL     [réduction par utilisation de la règle 41 (expression)]
    t_DIV     [réduction par utilisation de la règle 41 (expression)]
    t_DIFF    [réduction par utilisation de la règle 41 (expression)]
    t_COMPAR  [réduction par utilisation de la règle 41 (expression)]
    t_INF     [réduction par utilisation de la règle 41 (expression)]
    t_SUP     [réduction par utilisation de la règle 41 (expression)]
    $défaut  réduction par utilisation de la règle 41 (expression)


État 79

   35 expression: expression . t_ADD expression
   36           | expression . t_MUL expression
   37           | expression . t_DIV expression
   38           | expression . t_DIFF expression
   39           | expression . t_INF expression
   39           | expression t_INF expression .
   40           | expression . t_SUP expression
   41           | expression . t_COMPAR expression

    t_ADD     décalage et aller à l'état 59
    t_MUL     décalage et aller à l'état 60
    t_DIV     décalage et aller à l'état 61
    t_DIFF    décalage et aller à l'état 62
    t_COMPAR  décalage et aller à l'état 63
    t_INF     décalage et aller à l'état 64
    t_SUP     décalage et aller à l'état 65

    t_ADD     [réduction par utilisation de la règle 39 (expression)]
    t_MUL     [réduction par utilisation de la règle 39 (expression)]
    t_DIV     [réduction par utilisation de la règle 39 (expression)]
    t_DIFF    [réduction par utilisation de la règle 39 (expression)]
    t_COMPAR  [réduction par utilisation de la règle 39 (expression)]
    t_INF     [réduction par utilisation de la règle 39 (expression)]
    t_SUP     [réduction par utilisation de la règle 39 (expression)]
    $défaut  réduction par utilisation de la règle 39 (expression)


État 80

   35 expression: expression . t_ADD expression
   36           | expression . t_MUL expression
   37           | expression . t_DIV expression
   38           | expression . t_DIFF expression
   39           | expression . t_INF expression
   40           | expression . t_SUP expression
   40           | expression t_SUP expression .
   41           | expression . t_COMPAR expression

    t_ADD     décalage et aller à l'état 59
    t_MUL     décalage et aller à l'état 60
    t_DIV     décalage et aller à l'état 61
    t_DIFF    décalage et aller à l'état 62
    t_COMPAR  décalage et aller à l'état 63
    t_INF     décalage et aller à l'état 64
    t_SUP     décalage et aller à l'état 65

    t_ADD     [réduction par utilisation de la règle 40 (expression)]
    t_MUL     [réduction par utilisation de la règle 40 (expression)]
    t_DIV     [réduction par utilisation de la règle 40 (expression)]
    t_DIFF    [réduction par utilisation de la règle 40 (expression)]
    t_COMPAR  [réduction par utilisation de la règle 40 (expression)]
    t_INF     [réduction par utilisation de la règle 40 (expression)]
    t_SUP     [réduction par utilisation de la règle 40 (expression)]
    $défaut  réduction par utilisation de la règle 40 (expression)


État 81

   29 ifblock1: t_IF t_PO expression $@8 t_PF . t_AO instruction t_AF

    t_AO  décalage et aller à l'état 88


État 82

   22 affectation: t_VAR t_AFFEC expression $@6 t_PV .

    $défaut  réduction par utilisation de la règle 22 (affectation)


État 83

   27 ifblock: ifblock1 t_ELSE $@7 t_AO instruction . t_AF

    t_AF  décalage et aller à l'état 89


État 84

   10 declaration_type: t_VIRG t_VAR $@5 . declaration_type

    t_VIRG  décalage et aller à l'état 52
    t_PV    décalage et aller à l'état 53

    declaration_type  aller à l'état 90


État 85

   23 corpsfct: declaration . instruction

    t_PRINTF  décalage et aller à l'état 21
    t_WHILE   décalage et aller à l'état 22
    t_IF      décalage et aller à l'état 23
    t_VAR     décalage et aller à l'état 24

    instruction  aller à l'état 91
    affectation  aller à l'état 26
    ifblock      aller à l'état 27
    ifblock1     aller à l'état 28
    whileblock   aller à l'état 29
    print        aller à l'état 30


État 86

   24 corpsfct: instruction .

    $défaut  réduction par utilisation de la règle 24 (corpsfct)


État 87

   30 whileblock: t_WHILE t_PO expression t_PF t_AO corpsfct . t_AF

    t_AF  décalage et aller à l'état 92


État 88

   29 ifblock1: t_IF t_PO expression $@8 t_PF t_AO . instruction t_AF

    t_PRINTF  décalage et aller à l'état 21
    t_WHILE   décalage et aller à l'état 22
    t_IF      décalage et aller à l'état 23
    t_VAR     décalage et aller à l'état 24

    instruction  aller à l'état 93
    affectation  aller à l'état 26
    ifblock      aller à l'état 27
    ifblock1     aller à l'état 28
    whileblock   aller à l'état 29
    print        aller à l'état 30


État 89

   27 ifblock: ifblock1 t_ELSE $@7 t_AO instruction t_AF .

    $défaut  réduction par utilisation de la règle 27 (ifblock)


État 90

   10 declaration_type: t_VIRG t_VAR $@5 declaration_type .

    $défaut  réduction par utilisation de la règle 10 (declaration_type)


État 91

   23 corpsfct: declaration instruction .

    $défaut  réduction par utilisation de la règle 23 (corpsfct)


État 92

   30 whileblock: t_WHILE t_PO expression t_PF t_AO corpsfct t_AF .

    $défaut  réduction par utilisation de la règle 30 (whileblock)


État 93

   29 ifblock1: t_IF t_PO expression $@8 t_PF t_AO instruction . t_AF

    t_AF  décalage et aller à l'état 94


État 94

   29 ifblock1: t_IF t_PO expression $@8 t_PF t_AO instruction t_AF .

    $défaut  réduction par utilisation de la règle 29 (ifblock1)
